GNOME Bugzilla – Bug 656649
flacparse: fix off by one in frame size check
Last modified: 2011-08-16 12:40:23 UTC
Yes, I was tracking another bug and the small test file I generated to test with improbably just happened to trigger this, with a second and last frame of 1615 bytes.
Created attachment 193934 [details] [review] flacparse: fix off by one in frame size check
Pushed, thanks :)
Comment on attachment 193934 [details] [review] flacparse: fix off by one in frame size check commit 6ac7ad8a2ce59bebcb5b5085fa48c354afff539f Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Tue Aug 16 13:16:22 2011 +0100 flacparse: fix off by one in frame size check Yes, I was tracking another bug and the small test file I generated to test with improbably just happened to trigger this, with a second and last frame of 1615 bytes. https://bugzilla.gnome.org/show_bug.cgi?id=656649